[package]
name = "program-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"

[dependencies]
solana-program = "=1.14.6"
spl-token = { version = "3.5.0", features = ["no-entrypoint"]}

[features]
test-sbf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=1.14.6"
solana-sdk = "=1.14.6"

[lib]
crate-type = ["cdylib"]
